rename Image.hash to anyHash, remove tagObjs